GNOME Bugzilla – Bug 657105
Clicking the spinner icon does not bring up the preference dialog
Last modified: 2011-08-23 14:02:11 UTC
Clicking the spinner icon does not bring up the preference dialog, contrary to what the tooltip suggests.
Right we used to open the accounts-dialog but we removed this as it was kinda magic. I guess we should remove the tooltip as well. Nick: thoughts?
Definitely remove the tooltip. We should probably remove the spinner as well, if we implement the new loading progress/error states in the contact list.
Created attachment 194485 [details] [review] main-window: remove the throbber tooltip Clicking on it doesn't open the accounts dialog any more.
Attachment 194485 [details] pushed as a541703 - main-window: remove the throbber tooltip