main-window: remove the throbber tooltip

Clicking on it doesn't open the accounts dialog any more.

https://bugzilla.gnome.org/show_bug.cgi?id=657105